--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   	<label for="password">Password:</label>
   	<input type="password" id="password" name="user_password" placeholder="At least 5 characters">
 
-		<span id="message">Some fields are invalid. Please check your input.</span>
+		<span id="error_message">Some fields are invalid. Please check your input.</span>
 
   	<button type="submit">Sign Up</button>
 
 	</form>
 
 	<script type="text/javascript" src="app.js"></script>
-	
+
 </body>
 </html>
